@@ -42,7 +42,7 @@ MODULE MOD_WAVE_CURRENT_INTERACTION
    REAL(SP), ALLOCATABLE :: ROLLA_VF(:) !Xia et al. (2020)
 #  endif
 ! end
-   REAL(SP), PARAMETER :: KDMAX = 5.0_SP
+   REAL(SP), PARAMETER :: KDMAX = 3.0_SP ! Based on MELLOR(2015). For old code: KDMAX = 5.0_SP
    REAL(SP), PARAMETER :: WAVE_LENGTH_MIN = 0.01_SP
    REAL(SP), PARAMETER :: eps1 = 1E-14_SP
 
@@ -483,6 +483,7 @@ MODULE MOD_WAVE_CURRENT_INTERACTION
    U_STOKES_3D_TMP = 0.0_SP; U_STOKES_3D = 0.0_SP; U_STOKES_2D = 0.0_SP
    V_STOKES_3D_TMP = 0.0_SP; V_STOKES_3D = 0.0_SP; V_STOKES_2D = 0.0_SP
    DO I=1,M
+    IF(KD(I) <= KDMAX)THEN
      DO K=1,KBM1
         FAC2 = 1.0_SP+ZZ(I,K)
 # if defined (WAVE_ROLLER)
@@ -493,6 +494,18 @@ MODULE MOD_WAVE_CURRENT_INTERACTION
         U_STOKES_3D_TMP(I,K)=CFF2*WAVE_NUMBER_X(I)
         V_STOKES_3D_TMP(I,K)=CFF2*WAVE_NUMBER_Y(I)
      ENDDO
+    ELSE
+     DO K=1,KBM1
+        FAC2 = ZZ(I,K)
+# if defined (WAVE_ROLLER)
+        CFF2=2/WAVE_C(I)*EXP(KD(I)*FAC2)*(WAVE_ENERGY(I)+D(I)*GRAV_N(I)*ROLLA(I)/(WLEN(I)+eps1))
+# else
+        CFF2=2/WAVE_C(I)*EXP(KD(I)*FAC2)*WAVE_ENERGY(I)
+# endif
+        U_STOKES_3D_TMP(I,K)=CFF2*WAVE_NUMBER_X(I)
+        V_STOKES_3D_TMP(I,K)=CFF2*WAVE_NUMBER_Y(I)
+     ENDDO
+    END IF 
    ENDDO
    DO I=1,NT
      DO K=1,KBM1
